--- a/rollcall_web_config/web_config.ini
+++ b/rollcall_web_config/web_config.ini
@@ -1,6 +1,6 @@
 [options]
-if_gonggao_show='True'
+if_gonggao_show=True
 
 [text]
-title='欢迎使用RollCall点名器'
-text='欢迎使用RollCall点名器！按确认键继续...'
+title=欢迎使用RollCall点名器
+text=欢迎使用RollCall点名器！按确认键继续...
