--- a/rollcall_web_config/web_config.ini
+++ b/rollcall_web_config/web_config.ini
@@ -1,7 +1,7 @@
 [date]
 version=3.0
 key=['rollcalldm','binzhijie','jiege']
-test_num=[binzhijierollcalldm20091026]
+test_num=['binzhijierollcalldm20091026']
 
 [options]
 if_gonggao_show=True
