--- a/rollcall_web_config/web_config.ini
+++ b/rollcall_web_config/web_config.ini
@@ -1,11 +1,11 @@
 [date]
-version=3.5
+version=3.0
 key=['rollcalldm','binzhijie','jiege']
 test_num=['binzhijierollcalldm20091026']
 
 [options]
 if_gonggao_show=False
-can_use=True
+can_use=False
 
 [text]
 title=欢迎使用RollCall点名器
