--- a/rollcall_web_config/web_config.ini
+++ b/rollcall_web_config/web_config.ini
@@ -12,4 +12,4 @@ title=欢迎使用RollCall点名器
 text=欢迎使用RollCall点名器！按确认键继续...
 
 not_can_use_title=Tips:
-not_can_use_text=当前禁止使用...
+not_can_use_text=正在维护中...
