--- a/rollcall_web_config/web_config.ini
+++ b/rollcall_web_config/web_config.ini
@@ -4,12 +4,12 @@ key=['rollcalldm','binzhijie','jiege']
 test_num=['binzhijierollcalldm20091026']
 
 [options]
-if_gonggao_show=False
-can_use=False
+if_gonggao_show=True
+can_use=True
 
 [text]
 title=欢迎使用RollCall点名器
-text=欢迎使用RollCall点名器！按确认键继续...
+text=欢迎使用RollCall点名器！\nv3.0版本已发布！\n按确认键继续...
 
 not_can_use_title=Tips:
 not_can_use_text=正在维护中...
