--- a/rollcall_web_config/web_config.ini
+++ b/rollcall_web_config/web_config.ini
@@ -9,7 +9,7 @@ can_use=True
 
 [text]
 title=欢迎使用RollCall点名器
-text=欢迎使用RollCall点名器！\nv3.0版本已发布！\n按确认键继续...
+text=欢迎使用RollCall点名器！   v3.0版本已发布！   按确认键继续...
 
 not_can_use_title=Tips:
 not_can_use_text=正在维护中...
