--- a/rollcall_web_config/web_config.ini
+++ b/rollcall_web_config/web_config.ini
@@ -4,7 +4,7 @@ key=['rollcalldm','binzhijie','jiege']
 test_num=['binzhijierollcalldm20091026']
 
 [options]
-if_gonggao_show=False
+if_gonggao_show=True
 can_use=True
 
 [text]
